GNOME Shell not showing file search in overview
Affected version: 3.36.0-3
- Os: Arch x86_x64 2020.03.01, Ubuntu Focal Fossa Development, Debian Unstable, Manjaro Unstable
- Affected GNOME Shell version: 3.35.92 and 3.36.0-3
- Affected Nautilus version: Not clear
- This issuse appear in both, Xorg and Wayland
Bug summary
Provided that search options for files, bookmarks and others are given in the gnome-control-center/search, searching a FILE.foo in activity view (overview) shows no result. Instead, searching for a file in nautilus, or by tracker search, works as expected (see screenshots).
Steps to reproduce
- Go to gnome-control-center/search tab
- Enable file search
- Go to Search Location
- Add a Bookmark or a folder of your preference that includes common files extensions (.txt, .pdf,. docx, .py, etc), then wait and check for tracker to index.
- Search for any of the files indexed in overview
What happened
GNOME shell overview is not showing file search result in the activity view.
What did you expect to happen
The normal behavior is to expect that search results are showed in the activity view (overview) when files are placed inside $HOME folder/subfolders
Relevant logs, screenshots, screencasts etc.
Below we have two screenshots reproducing the issue. They were made when searching for the vsmb.pdf file, which is located in $HOME/Documents folder.
I have reopened the issue because this is not a duplicate of #502. The test performed was always with folders inside $HOME directory. The description of the issue has been update to include more information.
Summary: I copied files inside $HOME/any_folder (e.g. documents, images, videos) and directly in $HOME, then waited for tracker to index, then do a search trough overview and in Nautilus. The result: In nautilus all the files were found. However, only the files inside $HOME but outside $HOME/any_folder were showed in Activities view (Overview).
Right now I have tested the issue with several Nautilus and Gnome shell versions:
-
Debian Testing with Gnome 3.34 and Nautilus 3.34 (WORKING)
-
Debian Unstable with Gnome 3.34 and Nautilus 3.36 (WORKING)
-
Ubuntu Focal Fossa Development with Gnome 3.35.92 and Nautilus 3.36 (NOT WORKING)
-
Arch with Gnome 3.36 and Nautilus 3.36 (NOT WORKING)
-
Manjaro unstable with Gnome 3.36 and Nautilus 3.36 (NOT WORKING)
As can be seen, in the second case with Debian Unstable, having gnome-shell 3.34 and Nautilus 3.36 work as expected.