search-engine-tracker: Fix broken query under some locales

We set a 5.0 rank for filename matches in the SPARQL query as a float
argument in a format string.

However, the floats in format strings are translated with the decimal
separator from the locale. This means in some locales the rank has a
comma instead of a dot, which results in a query error. In turn, this
effectively broke the shell search provider.

Instead of using a format specifier and passing the value as an
argument, we should just use compile-time concatenation to insert '5.0'
in the query unmodified.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1412 and #1437

Cherry-picked from 7f00ede9b410e88106cef34c634cb46e46015e37